working gpu benches in substrate

--- a/substrate/client/executor/Cargo.toml
+++ b/substrate/client/executor/Cargo.toml
@@ -58,6 +58,10 @@ tempfile = { workspace = true }
 name = "bench"
 harness = false
 
+[[bench]]
+name = "bench_gpu"
+harness = false
+
 [features]
 default = ["std"]
 # This crate does not have `no_std` support, we just require this for tests
