--- a/Cargo.toml
+++ b/Cargo.toml
@@ -814,6 +814,7 @@ kitchensink-runtime = { path = "substrate/bin/node/runtime" }
 kvdb = { version = "0.13.0" }
 kvdb-memorydb = { version = "0.13.0" }
 kvdb-rocksdb = { version = "0.19.0" }
+kvdb-nomtdb = { path = "./nomt/kvdb-nomt"}
 kvdb-shared-tests = { version = "0.11.0" }
 landlock = { version = "0.3.0" }
 lazy_static = { version = "1.4.0" }
