--- a/substrate/client/db/Cargo.toml
+++ b/substrate/client/db/Cargo.toml
@@ -23,6 +23,7 @@ hash-db = { workspace = true, default-features = true }
 kvdb = { workspace = true }
 kvdb-memorydb = { workspace = true }
 kvdb-rocksdb = { optional = true, workspace = true }
+kvdb-nomtdb = { path = "./nomt/kvdb-nomt", workspace = true }
 linked-hash-map = { workspace = true }
 log = { workspace = true, default-features = true }
 parity-db = { workspace = true }
@@ -41,6 +42,7 @@ sp-trie = { workspace = true, default-features = true }
 [dev-dependencies]
 criterion = { workspace = true, default-features = true }
 kvdb-rocksdb = { workspace = true }
+kvdb-nomtdb = { path = "./nomt/kvdb-nomt", workspace = true }
 rand = { workspace = true, default-features = true }
 tempfile = { workspace = true }
 quickcheck = { workspace = true }
@@ -57,9 +59,16 @@ runtime-benchmarks = [
 	"sp-runtime/runtime-benchmarks",
 ]
 rocksdb = ["kvdb-rocksdb"]
+# nomtdb = ["kvdb-nomtdb"]
+
 
 [[bench]]
 name = "state_access"
+harness = false
+
+
+[[bench]]
+name = "read_write"
 harness = false
 
 [lib]
